# docs/swagger.yaml
@@ -2,17 +2,17 @@ basePath: /api
 definitions:
   models.Loan:
     properties:
-      loanDate:
+      loan_date:
         type: string
       resource:
         $ref: '#/definitions/models.Resource'
-      resourceid:
+      resource_id:
         type: integer
-      returndate:
+      return_date:
         type: string
       user:
         $ref: '#/definitions/models.User'
-      userid:
+      user_id:
         type: integer
     type: object
   models.Resource:
@@ -21,7 +21,7 @@ definitions:
         type: string
       id:
         type: integer
-      isAvailable:
+      is_available:
         type: boolean
       title:
         type: string
@@ -33,20 +33,26 @@ definitions:
     - book
     - game
     - film
+    - autre
     type: string
     x-enum-varnames:
     - Book
     - Game
     - Film
+    - Autre
   models.User:
     properties:
       email:
         type: string
+      firstname:
+        type: string
       id:
         type: integer
-      name:
+      lastname:
         type: string
-      password:
+      nationality:
+        type: string
+      phone:
         type: string
     type: object
 host: localhost:8080
@@ -57,6 +63,25 @@ info:
   version: "1.0"
 paths:
   /loans:
+    get:
+      description: Retrieve all loans
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Loan'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get all loans
+      tags:
+      - Loans
     post:
       consumes:
       - application/json
@@ -210,6 +235,40 @@ paths:
       summary: Update an existing resource
       tags:
       - Resources
+  /restitute:
+    post:
+      consumes:
+      - application/json
+      description: Restitute resources from loans
+      parameters:
+      - description: List of loans to restitute
+        in: body
+        name: loans
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/models.Loan'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Resources restituted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Restitute resources
+      tags:
+      - Loans
   /users:
     get:
       consumes:
@@ -318,31 +377,6 @@ paths:
             additionalProperties: true
             type: object
       summary: Delete a user
-      tags:
-      - Users
-    get:
-      consumes:
-      - application/json
-      description: Get a user by their ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get user by ID
       tags:
       - Users
 swagger: "2.0"
